--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,9 @@
 
   --font-weight-1: 700;
   --font-weight-2: 400;
+
+  --border-radius-1: 8px;
+  --border-radius-2: 4px;
 }
 
 h1 {
@@ -46,9 +49,23 @@ h4 {
   font-size: var(--font-size-5);
   font-weight: var(--font-weight-1);
 }
+main {
+  margin-top: 39px;
+  display: flex;
+  flex-direction: row;
+}
 
-#root {
-  padding: 2rem;
-  margin: 0 auto;
-  text-align: center;
+.container {
+  margin: 0 100px;
+}
+
+@media (max-width: 700px) {
+  .container {
+    margin: 0 15px;
+  }
+  main {
+    margin-top: 20px;
+    flex-direction: column;
+    gap: 16px;
+  }
 }
