--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,14 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 40px;
   gap: 16px;
+  width: 50%;
+}
+
+@media (max-width: 800px) {
+  section {
+    margin-top: 20px;
+    width: 100%;
+  }
 }
