--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,5 +1,5 @@
 li {
-  width: 90%;
+  width: 100%;
   max-width: 560px;
   list-style: none;
   display: flex;
@@ -23,4 +23,10 @@ li {
   display: flex;
   align-items: center;
   gap: 27px;
+}
+
+@media (max-width: 800px) {
+  li {
+    max-width: 363px;
+  }
 }
