--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -1,5 +1,7 @@
 .filter-div {
-  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   max-width: 560px;
 }
 .filter-div > h3 {
@@ -17,17 +19,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 32px;
+  align-items: center;
+  gap: 16px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 800px) {
   .filter-div {
-    display: flex;
     flex-direction: column;
     gap: 12px;
     align-items: center;
   }
   .transactions-list {
-    gap: 16px;
+    width: 100%;
   }
 }
