--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ main {
   margin-top: 39px;
   display: flex;
   flex-direction: row;
+  gap: 20px;
   margin-bottom: 40px;
 }
 
@@ -60,7 +61,7 @@ main {
   margin: 0 100px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .container {
     margin: 0 15px;
   }
