--- a/src/index.css
+++ b/src/index.css
@@ -50,24 +50,23 @@ h4 {
   font-weight: var(--font-weight-1);
 }
 main {
-  margin-top: 39px;
   display: flex;
   flex-direction: row;
   gap: 20px;
-  margin-bottom: 40px;
 }
 
 .container {
-  margin: 0 100px;
+  margin: 0 20%;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .container {
-    margin: 0 15px;
+    margin: 0 10%;
   }
   main {
     margin-top: 20px;
     flex-direction: column;
+    align-items: center;
     gap: 16px;
   }
 }
