--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -6,6 +6,7 @@ li {
   padding: 10px 18px;
   background: var(--grey-1);
   border-radius: var(--border-radius-2);
+  box-shadow: 0px 4px 42px -12px rgba(0, 0, 0, 0.25);
 }
 .title-description-card > h3 {
   font-size: var(--font-size-4);
