--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,800&display=swap");
 
 * {
   margin: 0;
@@ -59,12 +59,11 @@ main {
   margin: 0 20%;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .container {
     margin: 0 10%;
   }
   main {
-    margin-top: 20px;
     flex-direction: column;
     align-items: center;
     gap: 16px;
