--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -22,6 +22,7 @@
   justify-content: center;
   width: 100%;
   gap: 16px;
+  margin-bottom: 40px;
 }
 .no-louch {
   font-size: var(--font-size-3);
